--- a/hbase/sesion6.ipynb
+++ b/hbase/sesion6.ipynb
@@ -3862,7 +3862,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8259276e-4678-4835-82e3-a53ddd326501"
+        "outputId": "ed2910e1-2f4d-478b-d5b7-68a808de269d"
       },
       "source": [
         "%%bash\n",
@@ -3876,7 +3876,7 @@
         "exit\n",
         "EOF"
       ],
-      "execution_count": 66,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -3887,24 +3887,24 @@
             "Use \"exit\" to quit this interactive shell.\n",
             "For Reference, please visit: http://hbase.apache.org/2.0/book.html#shell\n",
             "Version 2.5.6, r6bac842797dc26bedb7adc0759358e4c8fd5a992, Sat Oct 14 23:36:46 PDT 2023\n",
-            "Took 0.0030 seconds\n",
+            "Took 0.0029 seconds\n",
             "hbase:001:0> disable 'RQ4'\n",
-            "Took 1.2257 seconds\n",
+            "Took 1.8220 seconds\n",
             "hbase:002:0> drop 'RQ4'\n",
-            "Took 0.1427 seconds\n",
+            "Took 0.1610 seconds\n",
             "hbase:003:0> create 'RQ4' , 'pairs'\n",
             "Created table RQ4\n",
-            "Took 0.6625 seconds\n",
+            "Took 0.7220 seconds\n",
             "=> Hbase::Table - RQ4\n",
             "hbase:004:0> disable 'RQ4' # Para evitar su uso temporal\n",
-            "Took 0.3616 seconds\n",
+            "Took 0.3413 seconds\n",
             "hbase:005:0> alter 'RQ4' , { NAME => 'pairs', BLOOMFILTER => 'ROW'}\n",
             "Updating all regions with the new schema...\n",
             "All regions updated.\n",
             "Done.\n",
-            "Took 1.2966 seconds\n",
+            "Took 1.3677 seconds\n",
             "hbase:006:0> enable 'RQ4'\n",
-            "Took 0.6821 seconds\n",
+            "Took 0.6339 seconds\n",
             "hbase:007:0> exit\n"
           ]
         }
@@ -3923,11 +3923,10 @@
         "    for key, data in posts.scan(filter=\"SingleColumnValueFilter('rawdata', 'PostTypeId', =, 'binary:2')\"):\n",
         "        owner_id = data[b'rawdata:OwnerUserId'].decode('utf-8')\n",
         "        parent_id = data[b'rawdata:ParentId'].decode('utf-8')\n",
-        "        post_id = data[b'rawdata:Id'].decode('utf-8')\n",
         "\n",
         "        row_questioner = posts.row(parent_id)\n",
         "        questioner = row_questioner[b'rawdata:OwnerUserId'].decode('utf-8')\n",
-        "        if questioner != '' and owner_id != '':\n",
+        "        if questioner != '' and owner_id != '' and owner_id != questioner:\n",
         "          if questioner not in question_answers:\n",
         "            question_answers[questioner] = [owner_id]\n",
         "          else:\n",
@@ -3936,7 +3935,7 @@
         "    # Recorremos las respuestas para cada pregunta\n",
         "    for questioner, answerers in question_answers.items():\n",
         "      for answerer in answerers:\n",
-        "        if answerer in question_answers and questioner in question_answers[answerer] and answerer != questioner:\n",
+        "        if answerer in question_answers and questioner in question_answers[answerer]:\n",
         "          if (questioner,answerer) not in pairs_question_answer and (answerer,questioner) not in pairs_question_answer:\n",
         "            pairs_question_answer.append((questioner,answerer))\n",
         "\n",
@@ -3954,7 +3953,7 @@
       "metadata": {
         "id": "nzFclaPqdItg"
       },
-      "execution_count": 67,
+      "execution_count": 75,
       "outputs": []
     },
     {
