--- a/neo4j/sesion7.ipynb
+++ b/neo4j/sesion7.ipynb
@@ -69,7 +69,7 @@
         "!sudo apt update -qq\n",
         "!sudo apt install -qq apt-transport-https ca-certificates curl software-properties-common"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
       "source": [
         "!curl -fsSL https://debian.neo4j.com/neotechnology.gpg.key | sudo apt-key add -"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
       "source": [
         "!sudo add-apt-repository -y \"deb https://debian.neo4j.com stable 4.1\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
       "source": [
         "!sudo apt install -qq neo4j"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
       "source": [
         "!sed -i -e '1s/^/dbms.memory.heap.maxSize=3G\\n/;1s/^/dbms.import.csv.legacy_quote_escaping=false\\n/;1s/^/dbms.security.auth_enabled=false\\n/' /etc/neo4j/neo4j.conf"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "source": [
         "!neo4j start"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +291,7 @@
       "source": [
         "!head /etc/neo4j/neo4j.conf"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,7 +319,7 @@
       "source": [
         "!wget http://dsevilla-proxy.inf.um.es/frp-neo4j -qq -O frpc.ini"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
       "source": [
         "!wget https://github.com/fatedier/frp/releases/download/v0.52.3/frp_0.52.3_linux_amd64.tar.gz"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +372,7 @@
       "source": [
         "!tar zxvf frp_*"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +396,7 @@
       "source": [
         "!./frp_0.*/frpc -c frpc.ini >/dev/null 2>&1 &"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -411,7 +411,7 @@
       "source": [
         "!grep ^remote_port frpc.ini | sed -e '1s/remote_port = /http:\\/\\/dsevilla-proxy.inf.um.es:/;2s/remote_port = /bolt:\\/\\/dsevilla-proxy.inf.um.es:/'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +437,7 @@
         "%matplotlib inline\n",
         "matplotlib.style.use('ggplot')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +452,7 @@
       "source": [
         "!pip install neo4j-driver pyvis"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +533,7 @@
         "for record in results:\n",
         "  print(record['id'])\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -562,7 +562,7 @@
         "  for record in results:\n",
         "    print(record)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -575,7 +575,7 @@
       "metadata": {
         "id": "m-qbWATWPZQf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +614,7 @@
       "source": [
         "run_query(\"CREATE INDEX ON :User(Id);\")"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -663,7 +663,7 @@
         "download_csv(baseurl, 'Posts.csv')\n",
         "download_csv(baseurl, 'Users.csv')"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -674,7 +674,7 @@
       "source": [
         "!sudo ln Posts.csv  /var/lib/neo4j/import/"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,7 +699,7 @@
         ")\n",
         "print(result.consume().counters)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +733,7 @@
         "  query = \"CALL apoc.periodic.iterate('MATCH (n) RETURN n','DETACH DELETE n', { batchSize:10000 })\"\n",
         "  run_query(query)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -760,7 +760,7 @@
         "  SET n:Question;\n",
         "''')"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,7 +798,7 @@
         "  SET n:Answer;\n",
         "''')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -840,7 +840,7 @@
         "'''\n",
         ")"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -906,7 +906,7 @@
       "metadata": {
         "id": "LO8Q2t91RvDz"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -930,7 +930,7 @@
         "  result = session.run(query)\n",
         "  visualize_result(result.graph(), nodes_text_properties)\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1342,7 +1342,7 @@
       "source": [
         "run_query(\"CREATE INDEX ON :Post(Id);\")"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1380,7 +1380,7 @@
         "CREATE (a)-[:ANSWERS]->(q)\n",
         ";''')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1424,7 +1424,7 @@
         "\n",
         "  df.plot(kind='scatter',x='p.Id',y='r.Id',figsize=(15,15))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1472,7 +1472,7 @@
         "  for r in res:\n",
         "    print(r['u1'], r['u2'])"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1632,7 +1632,7 @@
         "  for r in res:\n",
         "    print(r['u1.Id'], r['u2.Id'])"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1792,7 +1792,7 @@
         "  for r in res:\n",
         "    print(r)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1826,7 +1826,7 @@
         "  result = session.run(query)\n",
         "  visualize_result(result.graph(), nodes_text_properties)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2249,7 +2249,7 @@
         "  result = session.run(query)\n",
         "  visualize_result(result.graph(), nodes_text_properties)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2667,7 +2667,7 @@
         "  for r in res:\n",
         "    print(r['p'])"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2691,8 +2691,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Eliminamos las relaciones si existen previamente"
+      ],
+      "metadata": {
+        "id": "7QNSESHjuvGJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Eliminamos relacion :TAGGED_BY\n",
         "run_query(\n",
         "'''\n",
         "MATCH (:Question)-[r:TAGGED_BY]->(:Tag)\n",
@@ -2707,7 +2717,7 @@
         "id": "SaYuQ6p30SXL",
         "outputId": "97d2b9d8-a7f0-40ef-c69b-1d798e8351fa"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2724,6 +2734,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Eliminamos relacion :TAGS\n",
         "run_query(\n",
         "'''\n",
         "MATCH (:Tag)-[r:TAGS]->(:Question)\n",
@@ -2738,7 +2749,7 @@
         "id": "Qah86TNL0ryC",
         "outputId": "271be9af-b45f-4e30-e43b-513fad5cc903"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2753,8 +2764,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Una vez eliminadas las relaciones, eliminamos los nodos :Tag si existen"
+      ],
+      "metadata": {
+        "id": "2AjVp1lUvvd5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Eliminamos los nodos :Tag\n",
         "run_query(\n",
         "'''\n",
         "MATCH (t:Tag)\n",
@@ -2770,7 +2791,7 @@
         "id": "Vp65VKYI0bbC",
         "outputId": "225cab7d-906a-40a9-9af9-23f5c21cdd46"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2785,8 +2806,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Crearemos ahora los nodos :Tag con sus correspondientes relaciones :TAGGED_BY y :TAGS"
+      ],
+      "metadata": {
+        "id": "GTXv25Iqv2sZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Para la creacion de los nodos :Tag y sus relaciones lo que hemos hecho ha sido lo siguiente:\n",
+        "#   1. Buscar los nodos que fueran preguntas, y dividir sus tags por el caracter '><'\n",
+        "#   2. Hemos desplegado la lista de los tags para tratarlos\n",
+        "#   3. Hemos \"limpiado\" o filtrado cada tag para remplazar los caracteres restantes '<' o '>', ya tenemos el tag final\n",
+        "#   4. Comprobamos que sea un tag válido (no sea vacío) y creamos el nodo :Tag con nombre el tag limpio\n",
+        "#   5. Finalmente creamos las relaciones correspondientes entre la pregunta y el tag (:TAGGED_BY) y entre el tag y la pregunta (:TAGS)\n",
+        "\n",
         "run_query(\n",
         "'''\n",
         "MATCH (n:Question)\n",
@@ -2807,7 +2844,7 @@
         "id": "FAWqFHWrvsad",
         "outputId": "5a3a5740-8428-4c9f-8cef-d42c27aa302d"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2840,7 +2877,7 @@
         "  for r in res:\n",
         "    print(r)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2850,6 +2887,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Podemos observar como obtenemos un total de **5703 resultados** en la consulta, como era esperado"
+      ],
+      "metadata": {
+        "id": "JzXFqqPYwL3I"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2877,7 +2923,7 @@
         "  for r in res:\n",
         "    print(r)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4462,7 +4508,7 @@
         "  for r in res:\n",
         "    print(r)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9483,8 +9529,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Eliminamos la relacion si existe previamente"
+      ],
+      "metadata": {
+        "id": "9pA3f8Eiy_5v"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Eliminamos la relacion :INTERESTED_IN\n",
         "run_query(\n",
         "'''\n",
         "MATCH (:User)-[r:INTERESTED_IN]->(:Tag)\n",
@@ -9499,7 +9555,7 @@
         "id": "mm9Omll3B7Al",
         "outputId": "cdf5ab26-1247-44c7-b5cc-5601e4a5f54f"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9512,6 +9568,15 @@
           "execution_count": 44
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creamos la relacion propuesta"
+      ],
+      "metadata": {
+        "id": "_Fhi-v2_z7vm"
+      }
     },
     {
       "cell_type": "code",
@@ -9530,7 +9595,7 @@
         "'''\n",
         ")"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9563,7 +9628,7 @@
         "id": "9XpfKwK63Wn5",
         "outputId": "2cfb34d5-1804-44f5-d71d-4ca9f1b2db23"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9591,7 +9656,7 @@
       "metadata": {
         "id": "dHBCyalv-23F"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9614,7 +9679,7 @@
         "'''\n",
         ")"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9662,7 +9727,7 @@
         "  for r in res:\n",
         "    print(r)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
