--- a/P1_TGINE_JesusGarciaSalmeron.ipynb
+++ b/P1_TGINE_JesusGarciaSalmeron.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFhzVbnwyd6IGLwnIXqCwM",
+      "authorship_tag": "ABX9TyNxPHh9ZzAxPX7yPr7SoC4C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jVg5iWm4rjwS",
-        "outputId": "01f05045-a700-40a6-e79b-2e317ac6ad59"
+        "outputId": "36976955-d655-408f-e2bb-22c05acb3275"
       },
       "outputs": [
         {
@@ -121,7 +121,7 @@
         "# Para cada crawler que nos definimos nos debemos crear una clase Spider que debe heredar de la clase scrapy.Spider\n",
         "\n",
         "class UMSpider (scrapy.Spider):\n",
-        "    name = 'animals_nationalGeographic'\n",
+        "    name = 'nationalGeographic'\n",
         "\n",
         "    # Decimos que el dominio válido es el de la UM\n",
         "    allowed_domains = ['www.nationalgeographic.com.es']\n",
@@ -168,6 +168,7 @@
         "                for el in soup.find_all(class_=tag):\n",
         "                    el.extract()\n",
         "\n",
+        "            # Extraemos el cotenido\n",
         "            content = soup.get_text().strip().replace(\"\\\"\",\"\")\n",
         "\n",
         "            # Cogemos también la fecha si existe\n",
@@ -186,17 +187,17 @@
         "            data = {\n",
         "                'url' : url,\n",
         "                'title': title,\n",
-        "                'subtitle': subtitle\n",
-        "                #'content': content,\n",
-        "                # 'date': date\n",
+        "                'subtitle': subtitle,\n",
+        "                'content': content,\n",
+        "                'date': date\n",
         "            }\n",
         "\n",
-        "            # filename = str(random.random()).replace(\".\",\"\") + \".json\"\n",
+        "            filename = str(random.random()).replace(\".\",\"\") + \".json\"\n",
         "\n",
-        "            # # Guardamos el documento si tiene contenido y título\n",
-        "            # if content and title:\n",
-        "            #     with open ('animals/' + filename, 'w') as f:\n",
-        "            #         json.dump (data, f, indent = 4)\n",
+        "            # Guardamos el documento si tiene contenido y título\n",
+        "            if content and title:\n",
+        "                with open ('nationalGeographic/' + filename, 'w') as f:\n",
+        "                    json.dump (data, f, indent = 4)\n",
         "\n",
         "\n",
         "        # Obtenemos todas las otros links de la página representados por la etiqueta <a>\n",
@@ -229,8 +230,8 @@
         "\n",
         "# Como se ha definido anteriormente en el RSSCrawler, los ficheros se van a almacenar en la carpeta \"rss\"\n",
         "# Comprobamos que existe la carpeta y si no existe la creamos\n",
-        "if (os.path.exists('animals')== False):\n",
-        "    os.mkdir('animals')\n",
+        "if (os.path.exists('nationalGeographic')== False):\n",
+        "    os.mkdir('nationalGeographic')\n",
         "\n",
         "# Creamos el proceso con el RSSSpider\n",
         "process.crawl(UMSpider)\n",
@@ -242,7 +243,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L1GLL5wWwApe",
-        "outputId": "d2d7398d-082f-416a-de31-61a135f9dbf2"
+        "outputId": "b52a8f0a-e34c-4642-af5b-533f3f4a3b5c"
       },
       "execution_count": 3,
       "outputs": [
@@ -261,7 +262,7 @@
             "See the documentation of the 'REQUEST_FINGERPRINTER_IMPLEMENTATION' setting for information on how to handle this deprecation.\n",
             "  return cls(crawler)\n",
             "DEBUG:scrapy.utils.log:Using reactor: twisted.internet.epollreactor.EPollReactor\n",
-            "INFO:scrapy.extensions.telnet:Telnet Password: 2b6b328dfd442354\n",
+            "INFO:scrapy.extensions.telnet:Telnet Password: 2e406ba783a6b5d8\n",
             "INFO:scrapy.middleware:Enabled extensions:\n",
             "['scrapy.extensions.corestats.CoreStats',\n",
             " 'scrapy.extensions.telnet.TelnetConsole',\n",
@@ -300,24 +301,24 @@
             "{'downloader/request_bytes': 386,\n",
             " 'downloader/request_count': 1,\n",
             " 'downloader/request_method_count/GET': 1,\n",
-            " 'downloader/response_bytes': 39887,\n",
+            " 'downloader/response_bytes': 39806,\n",
             " 'downloader/response_count': 1,\n",
             " 'downloader/response_status_count/200': 1,\n",
-            " 'elapsed_time_seconds': 0.344267,\n",
+            " 'elapsed_time_seconds': 0.290644,\n",
             " 'finish_reason': 'finished',\n",
-            " 'finish_time': datetime.datetime(2023, 11, 29, 14, 34, 59, 717607, tzinfo=datetime.timezone.utc),\n",
-            " 'httpcompression/response_bytes': 119033,\n",
+            " 'finish_time': datetime.datetime(2023, 11, 29, 14, 46, 54, 723376, tzinfo=datetime.timezone.utc),\n",
+            " 'httpcompression/response_bytes': 118837,\n",
             " 'httpcompression/response_count': 1,\n",
             " 'log_count/DEBUG': 2,\n",
             " 'log_count/INFO': 10,\n",
-            " 'memusage/max': 141783040,\n",
-            " 'memusage/startup': 141783040,\n",
+            " 'memusage/max': 142336000,\n",
+            " 'memusage/startup': 142336000,\n",
             " 'response_received_count': 1,\n",
             " 'scheduler/dequeued': 1,\n",
             " 'scheduler/dequeued/memory': 1,\n",
             " 'scheduler/enqueued': 1,\n",
             " 'scheduler/enqueued/memory': 1,\n",
-            " 'start_time': datetime.datetime(2023, 11, 29, 14, 34, 59, 373340, tzinfo=datetime.timezone.utc)}\n",
+            " 'start_time': datetime.datetime(2023, 11, 29, 14, 46, 54, 432732, tzinfo=datetime.timezone.utc)}\n",
             "INFO:scrapy.core.engine:Spider closed (finished)\n"
           ]
         },
