--- a/TAD_JesusGarciaSalmeron.ipynb
+++ b/TAD_JesusGarciaSalmeron.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWkuvgdWF9eiEqmPcQrolf",
+      "authorship_tag": "ABX9TyM+wQLwEzImyvdVY3VFw5wT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,20 +41,85 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## T12 -- Tecnologías Serverless\n",
+        "## T16 -- Apache Druid\n",
         "\n",
-        "- Pasos de uso de cada plataforma. Al menos: AWS Lambda y Azure\n",
-        "  Functions (también se puede considerar Google UDF)\n",
-        "- Descripción del modo de funcionamiento,\n",
-        "  posibilidades de modelado de datos y características\n",
-        "- Mostrar cómo trabajar con los datos de Stackoverflow\n",
-        "- Mostrar cómo se realizarían las consultas RQ1 a RQ4 de los\n",
-        "  artículos vistos en la sesión 2\n",
-        "- Realizar pruebas de eficiencia comparada con alguna de las bases de\n",
-        "  datos vistas en la asignatura"
+        "## https://druid.apache.org/\n",
+        "\n"
       ],
       "metadata": {
         "id": "cwgwkiZiuD0y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "--------------------------------------------------------------------------------"
+      ],
+      "metadata": {
+        "id": "hdu4mjruFIzN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Pasos de instalación"
+      ],
+      "metadata": {
+        "id": "hvI0n17u9SRJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "--------------------------------------------------------------------------------"
+      ],
+      "metadata": {
+        "id": "kh6kRISlFPot"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Descripción de la herramienta, modo de funcionamiento,   posibilidades de modelado de datos y características"
+      ],
+      "metadata": {
+        "id": "9BT9cQiA-Zl5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "--------------------------------------------------------------------------------"
+      ],
+      "metadata": {
+        "id": "tYjatWqJFRsN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mostrar cómo importar los datos de Stackoverflow"
+      ],
+      "metadata": {
+        "id": "56nBGNCiMOKq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "--------------------------------------------------------------------------------"
+      ],
+      "metadata": {
+        "id": "VZPBW-D1MQhh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mostrar consultas sobre la base de datos de StackOverflow y si se   podrían realizar las consultas RQ1 a RQ4 de los artículos vistos en la   sesión 2"
+      ],
+      "metadata": {
+        "id": "lPWBU2EP-imo"
       }
     },
     {
@@ -74,6 +139,60 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### RQ2"
+      ],
+      "metadata": {
+        "id": "ss7qUHEn-sy4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NkkxkQihMaBJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### RQ3"
+      ],
+      "metadata": {
+        "id": "ZdhX1Gse-uno"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vzjTuh39MaeJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### RQ4"
+      ],
+      "metadata": {
+        "id": "kwWYuQJk-x3I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0HuoIuRdMbQZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
