--- a/TAD_JesusGarciaSalmeron.ipynb
+++ b/TAD_JesusGarciaSalmeron.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+wQLwEzImyvdVY3VFw5wT",
+      "authorship_tag": "ABX9TyMrktC4AV+tOc8dotf2hZm4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,6 +66,40 @@
       ],
       "metadata": {
         "id": "hvI0n17u9SRJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://druid.apache.org/downloads/"
+      ],
+      "metadata": {
+        "id": "ncXGG21rT5Vd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://druid.apache.org/docs/latest/tutorials/"
+      ],
+      "metadata": {
+        "id": "4jsxxgvjOhUJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "1.   Descargar e instalar Java\n",
+        "2.   Descargar el fichero de Apache Druid \"apache-druid-28.0.1-bin.tar.gz\"\n",
+        "3.   Descomprimir el fichero tar.gz\n",
+        "4.   Verificacion del entorno\n",
+        "5.   Arrancar el puerto\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KUO6Sa48XYYT"
       }
     },
     {
